--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,17 @@
 
 SPOTIFY_CLIENT_ID=your_client_id_here
 SPOTIFY_CLIENT_SECRET=your_client_secret_here
+
+# Genius API Credentials (for lyrics fetching)
+#
+# To get your credentials:
+# 1. Go to https://genius.com/api-clients
+# 2. Click "New API Client"
+# 3. Fill in app details:
+#    - App name: Any name you want
+#    - App Website URL: http://localhost
+#    - Redirect URI: http://localhost
+# 4. Generate "Client Access Token" (NOT Client ID/Secret)
+# 5. Copy the access token and paste below
+#
+GENIUS_ACCESS_TOKEN=your_genius_access_token_here
