--- a/.gitignore
+++ b/.gitignore
@@ -206,5 +206,10 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
-# Project data
+# Project data - keep user's listening data private
 data/
+songs/
+lyrics/
+
+# Spotify OAuth cache
+.cache
