--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-essentia-tensorflow==2.1b6.dev1389
-numpy>=1.24.0
-pandas>=2.0.0
-scikit-learn>=1.3.0
-umap-learn>=0.5.3
-hdbscan>=0.8.33
-plotly>=5.14.0
-sentence-transformers>=2.2.2
-langdetect>=1.0.9
-tqdm>=4.65.0
+essentia_tensorflow==2.1b6.dev1389
+hdbscan==0.8.41
+langdetect==1.0.9
+lyricsgenius==3.7.5
+numpy==2.4.0
+pandas==2.3.3
+plotly==6.5.0
+python-dotenv==1.2.1
+rapidfuzz==3.14.3
+scikit_learn==1.8.0
+sentence_transformers==5.2.0
+spotipy==2.25.2
+streamlit==1.52.2
+tqdm==4.67.1
+umap_learn==0.5.9.post2
