--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,4 @@ SPOTIFY_CLIENT_SECRET=your_client_secret_here
 # 5. Copy the access token and paste below
 #
 GENIUS_ACCESS_TOKEN=your_genius_access_token_here
+OPENAI_API_KEY=your_openai_api_key_here
